--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-
-
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:background="?attr/colorPrimary"
        />
         <android.support.design.widget.TabLayout
@@ -41,7 +40,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
-
+        <android.support.design.widget.FloatingActionButton
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/fab"
+            android:src="@mipmap/ic_plus"
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"
+            />
     </android.support.design.widget.CoordinatorLayout>
 
 
@@ -53,4 +60,5 @@
         app:menu="@menu/menu_navigation"
         app:headerLayout="@layout/navigation_header"
        />
+
 </android.support.v4.widget.DrawerLayout>
